add player movement functionality and improve initialization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "dungeon.h": "c",
-        "player.h": "c"
+        "player.h": "c",
+        "stdio.h": "c"
     }
 }
